# homog_track

./: CMakeLists.txt  bebop_camera_wrt_body.txt  camera_wrt_ardrone.txt  homography_tracking.launch  marker_command.launch  marker_decomp.launch  marker_desired.launch  marker_serial_start.launch  marker_track.launch  marker_track_service.launch  package.xml  setup_runs.txt  thresholding_cell_sheet.ods
calibrate_velocity_output/: .~lock.calibrate_velocity_output_gain.ods#  calibrate_velocity_output_gain.ods  output_0_50_2016-01-14-10-17-55.bag
launch/: exp_node.launch  exp_supporting_nodes.launch  homography_tracking_old.launch
msg/: DecompMsg.msg  HomogComplete.msg  HomogDecomposed.msg  HomogDesired.msg  HomogMarker.msg  ImageProcessingMsg.msg  RefMsg.msg
scripts/: controller.py
src/: camera_desired_1.cpp  camera_desired_2.cpp  camera_desired_3.cpp  camera_desired_4.cpp  camera_threshold.cpp  command_coerce.cpp  desired_velocity_tester.cpp  exp_with_ref_set_bebop_gen_des.cpp  experiment.cpp  experiment_with_ref_set.cpp  experiment_with_ref_set_bebop.cpp  homog_decompose_1.cpp  homog_decompose_2.cpp  homog_pose_node_mocap_with_stopping.cpp  joy_stick_control.cpp  marker_track_1.cpp  marker_track_2.cpp  marker_track_3.cpp  marker_track_4.cpp  marker_track_5.cpp  quad_controller_1.cpp  quad_controller_2.cpp  quad_controller_3.cpp  simulated_track_1.cpp  simulation.cpp  simulator_with_nodes.cpp  testing_stuff.cpp
srv/: HomogReference.srv
testing_files/: body_world_vel_test_1.txt  body_world_vel_test_2.txt  body_world_vel_test_3.txt  body_world_vel_test_4.txt  experiment.txt  experiment_11.ods  experiment_12.txt  experiment_14.txt  experiment_15.txt  experiment_2.txt  experiment_3.txt  experiment_5.txt  experiment_6.txt  experiment_8.txt  experiment_9.txt  slopes.txt  test_all_cpp.txt  test_all_slow_cpp.txt  test_all_slow_exp_cpp.txt  test_all_slow_exp_cpp_t.txt  test_stack_1.txt  test_with_nodes.txt  xcommand_map_0_05.txt  xcommand_map_0_10.txt  xcommand_map_0_15.txt  xcommand_map_0_25.txt  xcommand_map_0_30.txt  xcommand_map_0_40.txt  xcommand_map_0_50.txt  yawcommand_map_0_05.txt  yawcommand_map_0_10.txt  yawcommand_map_0_15.txt  yawcommand_map_0_25.txt  yawcommand_map_0_30.txt  yawcommand_map_0_40.txt  yawcommand_map_0_50.txt  yawcommand_map_0_60.txt  yawcommand_map_0_70.txt  yawcommand_map_0_80.txt  yawcommand_map_0_90.txt  (+20 more)
